Bug 216954 - lib/libc/rpc/rpc_test:raw SIGSEGVs on ^/stable/10@r313498
Summary: lib/libc/rpc/rpc_test:raw SIGSEGVs on ^/stable/10@r313498
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: Enji Cooper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-10 01:16 UTC by Enji Cooper
Modified: 2017-05-23 19:48 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enji Cooper freebsd_committer freebsd_triage 2017-02-10 01:16:38 UTC
$ sudo kyua debug -k /usr/tests/lib/libc/rpc/Kyuafile rpc_test:raw
Process with PID 10287 exited with signal 11 and dumped core; attempting to gather stack trace
[New LWP 100098]
Core was generated by `/usr/tests/lib/libc/rpc/rpc_test -vunprivileged-user=tests -r/tmp/kyua.NuDXK8/2/'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x0000000000000000 in ?? ()
#0  0x0000000000000000 in ?? ()
#1  0x0000000800f1c1ac in svc_getreq_common () from /lib/libc.so.7
#2  0x0000000800f190c0 in ?? () from /lib/libc.so.7
#3  0x0000000000401bd8 in ?? ()
#4  0x0000000800c4738c in atf_tc_run () from /usr/lib/private/libatf-c.so.1
#5  0x0000000800c44082 in atf_tp_main () from /usr/lib/private/libatf-c.so.1
#6  0x000000000040136f in ?? ()
#7  0x0000000800623000 in ?? ()
#8  0x0000000000000000 in ?? ()
GDB exited successfully
Files left in work directory after failure: rpc_test.core
rpc_test:raw  ->  broken: Premature exit; test case received signal 11 (core dumped)
$
Comment 1 commit-hook freebsd_committer freebsd_triage 2017-02-10 01:27:40 UTC
A commit references this bug:

Author: ngie
Date: Fri Feb 10 01:26:50 UTC 2017
New revision: 313500
URL: https://svnweb.freebsd.org/changeset/base/313500

Log:
  Expect :raw to fail with a SIGSEGV on ^/stable/10

  I haven't fully dug into why this happens, but it happens
  deterministically on ^/stable/10, but not on ^/stable/11 or
  ^/head

  PR:	216954
  Sponsored by:	Dell EMC Isilon

Changes:
  stable/10/contrib/netbsd-tests/lib/libc/rpc/t_rpc.c
Comment 2 Brooks Davis freebsd_committer freebsd_triage 2017-05-15 23:14:58 UTC
I'm not in a position to test this, but it's plausible it was fixed in r318327.
Comment 3 commit-hook freebsd_committer freebsd_triage 2017-05-23 19:46:16 UTC
A commit references this bug:

Author: ngie
Date: Tue May 23 19:45:31 UTC 2017
New revision: 318756
URL: https://svnweb.freebsd.org/changeset/base/318756

Log:
  :raw no longer SIGSEGVs on FreeBSD; revert the signal expectation

  This is a direct commit to ^/stable/10, since this expectation was only
  added to ^/stable/10's copy of t_raw.c.

  PR:		216954
  Sponsored by:	Dell EMC Isilon

Changes:
  stable/10/contrib/netbsd-tests/lib/libc/rpc/t_rpc.c
Comment 4 Enji Cooper freebsd_committer freebsd_triage 2017-05-23 19:48:09 UTC
Confirmed fixed after recent back ports.