Expect :raw to fail with a SIGSEGV on ^/stable/10

I haven't fully dug into why this happens, but it happens
deterministically on ^/stable/10, but not on ^/stable/11 or
^/head

PR:	216954
Sponsored by:	Dell EMC Isilon